<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/productNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productDescriptionDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="[description]"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescriptionText" />

    <TextView
        android:id="@+id/productPriceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[stock]"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/productPriceText"
        app:layout_constraintTop_toTopOf="@+id/productPriceText" />

    <TextView
        android:id="@+id/productPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Stock:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescriptionDetail" />

    <TextView
        android:id="@+id/productDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameDetail" />

    <TextView
        android:id="@+id/productQuantityDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[needed]"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/productQuantityText"
        app:layout_constraintTop_toTopOf="@+id/productQuantityText" />

    <TextView
        android:id="@+id/productQuantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/needed"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPriceDetail" />

    <Button
        android:id="@+id/productDetailSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="@+id/consumeProductAtPantry"
        app:layout_constraintStart_toStartOf="@+id/consumeProductAtPantry"
        app:layout_constraintTop_toBottomOf="@+id/productImageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopListDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableShoppingListText2" />

    <TextView
        android:id="@+id/availableShoppingListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/available_shopping_lists"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productQuantityText" />

    <TextView
        android:id="@+id/availableShoppingListText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_product_to_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableShoppingListText" />

    <Button
        android:id="@+id/consumeProductAtPantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consume_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amountToConsume"
        app:layout_constraintTop_toTopOf="@+id/amountToConsume" />

    <EditText
        android:id="@+id/amountToConsume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/amount_consume"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopListDetail" />

    <Button
        android:id="@+id/removeProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_product_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountToConsume" />

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="97dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/box" />

</androidx.constraintlayout.widget.ConstraintLayout>