<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/productNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/product_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameDetail"
        app:srcCompat="@drawable/box" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageView">

        <TextView
            android:id="@+id/productDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productDescriptionDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productDescriptionText" />

        <TextView
            android:id="@+id/productQuantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/productQuantityField"
            android:paddingVertical="10dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/productNeededText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingVertical="10dp"
            android:text="@string/needed"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/productNeededDetail"
            app:layout_constraintEnd_toStartOf="@+id/productNeededDetail"
            app:layout_constraintTop_toTopOf="@+id/productNeededDetail" />

        <TextView
            android:id="@+id/productNeededDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingVertical="10dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/productPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/productPriceField"
            android:paddingVertical="10dp"
            android:text="@string/price_store"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productDescriptionDetail">

            <EditText
                android:id="@+id/productPriceField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789.,"
                android:ems="7"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="@string/euro"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/qtyMinus"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:text="@string/minus"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/productQuantityField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="viewEnd" />

            <Button
                android:id="@+id/qtyPlus"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:text="@string/plus"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/classificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/classification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productNeededText" />

        <RatingBar
            android:id="@+id/submitionRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            app:layout_constraintEnd_toEndOf="@+id/classificationTextView"
            app:layout_constraintStart_toStartOf="@+id/classificationTextView"
            app:layout_constraintTop_toBottomOf="@+id/classificationTextView" />

        <Button
            android:id="@+id/submitProdClassification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_classification_button"
            app:layout_constraintEnd_toEndOf="@+id/submitionRatingBar"
            app:layout_constraintStart_toStartOf="@+id/submitionRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/submitionRatingBar" />

        <Button
            android:id="@+id/ratingHistButton"
            android:layout_width="68dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:text="Button"
            app:layout_constraintStart_toEndOf="@+id/submitionRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/productNeededDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/productDetailSave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#4CAF50"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/update"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="48dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>